fix(sbb-link): increase contrast of link underline

--- a/src/elements/link-list/link-list-anchor/link-list-anchor.scss
+++ b/src/elements/link-list/link-list-anchor/link-list-anchor.scss
@@ -10,7 +10,6 @@
 
 ::slotted([data-link]) {
   --sbb-link-text-decoration-line: none;
-  --sbb-link-hover-text-decoration: none;
   --sbb-link-padding: var(--sbb-spacing-fixed-1x) 0 var(--sbb-spacing-fixed-1x)
     var(--sbb-spacing-fixed-4x);
   --sbb-link-color-hover: var(--sbb-color-3);
